Added JXC exec section
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>